# python-sample-project

./: .gitignore  DEVELOPMENT_NOTES.md  LivaNova_Backend_Take_Home_Test.md  README.md  openapi.yaml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: geolocation.py
app/core/: exceptions.py  http_client.py  validators.py
app/dependencies/: client_ip.py
app/models/: errors.py  responses.py
app/services/: geolocation.py
app/services/ip_providers/: __init__.py  base.py  ip_api.py
tests/: __init__.py  conftest.py
tests/integration/: test_geolocation_endpoints.py
tests/unit/: test_geolocation_service.py  test_ip_providers.py  test_validators.py
